Fix alignment issue on docs cards (#1395)
* Fix alignment issue on docs cards

* Remove one space from title/icon placement

--- a/src/theme/DocCard/styles.module.css
+++ b/src/theme/DocCard/styles.module.css
@@ -20,7 +20,12 @@
 
 .cardTitle {
   font-size: 1.2rem;
+  display: flex;
 }
+
+/* .cardTitle img {
+  vertical-align: middle;
+} */
 
 .cardDescription {
   font-size: 0.8rem;
